# cmake-googletest-template

./: CMakeLists.txt
src/: CMakeLists.txt  lbt-info.cpp
test/: CMakeLists.txt  tests.cpp
